syntax = "proto3";

import "common.proto";

option go_package = "./clusterpb/;clusterpb";

message DataImportRequest {
    OperatorDTO operator = 1;
    string  clusterId = 2;
    string  userName = 3;
    string  password = 4;
    string  storageType = 5;
    string  bucketUrl = 6;
    string  endpointUrl = 7;
    string  accessKey = 8;
    string  secretAccessKey = 9;
    string  comment = 10;
    int64  recordId = 11;
}

message DataImportResponse {
    ResponseStatusDTO respStatus = 1;
    int64 recordId = 2;
}

message DataExportRequest {
    OperatorDTO operator = 1;
    string  clusterId = 2;
    string  userName = 3;
    string  password = 4;
    string  storageType = 5;
    string  fileType = 6;
    string  filter = 7;
    string  sql = 8;
    string  bucketUrl = 9;
    string  bucketRegion = 10;
    string  endpointUrl = 11;
    string  accessKey = 12;
    string  secretAccessKey = 13;
    string  zipName = 14;
    string  comment = 15;
}

message DataExportResponse {
    ResponseStatusDTO respStatus = 1;
    int64 recordId = 2;
}

message DataTransportQueryRequest {
    PageDTO pageReq = 1;
    OperatorDTO operator = 2;
    string clusterId = 3;
    int64 recordId = 4;
    bool reImport = 5;
}

message DataTransportInfo {
    int64 RecordId = 1;
    string clusterId = 2;
    string transportType = 3;
    int64 startTime = 4;
    int64 endTime = 5;
    string filePath = 6;
    string storageType = 7;
    DisplayStatusDTO displayStatus = 8;
}

message DataTransportQueryResponse {
    PageDTO pageReq = 1;
    ResponseStatusDTO respStatus = 2;
    repeated DataTransportInfo transportInfos = 3;
}

message DataTransportDeleteRequest {
    OperatorDTO operator = 1;
    string clusterId = 2;
    int64 RecordId = 3;
}

message DataTransportDeleteResponse {
    ResponseStatusDTO status = 1;
}
