syntax = "proto3";

import "db_cluster.proto";
import "db_task.proto";

option go_package = "./dbpb/;dbpb";

message TransportRecordDTO {
	int64 recordId = 1;
	string ClusterId = 2;
	string TransportType = 3;
	string FilePath = 4;
	string ZipName = 5;
	string TenantId = 6;
	int64 StartTime = 7;
	int64 EndTime = 8;
	string StorageType = 9;
	int64 FlowId = 10;
	string Comment = 11;
	bool reImportSupport = 12;
}

message DBCreateTransportRecordRequest {
    TransportRecordDTO record = 1;
}

message DBCreateTransportRecordResponse {
    DBClusterResponseStatus status = 1;
    int64 recordId = 2;
}

message DBUpdateTransportRecordRequest {
    TransportRecordDTO record = 1;
}

message DBUpdateTransportRecordResponse {
    DBClusterResponseStatus status = 1;
}

message DBFindTransportRecordByIDRequest {
    int64 recordId = 1;
}

message DBFindTransportRecordByIDResponse {
    DBClusterResponseStatus status = 1;
    TransportRecordDTO record = 2;
}

message DBListTransportRecordRequest {
    DBPageDTO page = 1;
	string clusterId = 2;
    int64 recordId = 3;
}

message DBTransportRecordDisplayDTO {
    TransportRecordDTO record = 1;
    DBFlowDTO flow = 2;
}

message DBListTransportRecordResponse {
    DBClusterResponseStatus status = 1;
    DBPageDTO page = 2;
    repeated DBTransportRecordDisplayDTO records = 3;
}

message DBDeleteTransportRequest {
    int64 recordId = 1;
}

message DBDeleteTransportResponse {
    DBClusterResponseStatus status = 1;
    TransportRecordDTO record = 2;
}